--- a/README
+++ b/README
@@ -4,9 +4,10 @@ This package provides support for image formats typically associated
 with OpenGL and/or hardware accelerated graphics in general, via the
 image.Image interface.
 
-Currently, this package supports:
+Currently, this package provides:
 
- - DXT1,DXT3,DXT5 images (*)
+ - DXT1,DXT3,DXT5 image support (*)
+ - Simple DDS file loader for DXT files (*)
 
 (*) indicates untested
 
